tests/parse_print/random_perturb/set01/delete-08/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/delete-08/delete-08.essence:3:23:
unexpected o
expecting of
    find x : set (size 2) o int(1..3)
                          ^